update my project

--- a/my_project/Dr_K/html/index.html
+++ b/my_project/Dr_K/html/index.html
@@ -138,59 +138,119 @@
               다년간 쌓인 R&D 데이터는 안정성을 더욱 높이며 글로벌 제약의 선두에
               설 수 있는 기반을 마련합니다
             </p>
-            <p></p>
-          </div>
-          <div class="img-box">
-            <!-- Swiper -->
-            <div class="swiper infoSwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide s1"></div>
-                <div class="swiper-slide s2"></div>
-                <div class="swiper-slide s3"></div>
-                <div class="swiper-slide s4"></div>
-                <div class="swiper-slide s5"></div>
-                <div class="swiper-slide s6"></div>
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-            <script>
-              var swiper = new Swiper(".infoSwiper", {
-                slidesPerView: 2,
-                spaceBetween: 10,
-                loop: true,
-                autoplay: {
-                  delay: 3000,
-                  disableOnInteraction: false,
-                },
-                breakpoints: {
-                  600: {
-                    slidesPerView: 3,
-                    spaceBetween: 30,
-                  },
-                },
-              });
-            </script>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="tech">
+    <section class="tech" data-aos="fade-down" data-aos-duration="700">
       <div class="op-box">
-        <div class="container">
+        <div class="inner">
           <h2>Technology</h2>
-          <div class="content">
-            <img src="../img/" alt="" />
-          </div>
-
-          <div class="buttons">
-            <button>a</button>
-            <button>b</button>
-            <button>c</button>
+          <div class="tech-content">
+            <div class="buttons">
+              <button id="btn1" class="active">Neutroamine</button>
+              <button id="btn2">Penoxycyline</button>
+              <button id="btn3">Go-Juice</button>
+              <button id="btn4">Lucyferium</button>
+              <button id="btn5">Yeyo</button>
+              <button id="btn6">Ambrosia</button>
+            </div>
+            <div class="content">
+              <div class="tech-box tech1">
+                <div class="tech-img img1"></div>
+                <div class="text-box">
+                  <div>
+                    <h3>뉴트로아민</h3>
+                    <p>극도의 환경에서 변형이 일어나지 않습니다.</p>
+                    <p>
+                      또한, 1400 여개의 약물과 화학 반응 안정성 검사 결과 인체에
+                      유해한 물질이 검출되지 않고, 변형도 일어나지 않음이
+                      확인되었습니다.
+                    </p>
+                    <p>
+                      저희는 뉴트로아민을 광범위한 제약에 사용하고 있습니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="tech-box tech2">
+                <div class="tech-img img2"></div>
+                <div class="text-box">
+                  <div>
+                    <h3>페녹시실린</h3>
+                    <p>
+                      강력하고 안정적인 항바이러스 성분으로, 대부분의 바이러스의
+                      활동성을 극도로 낮춰줍니다.
+                    </p>
+                    <p>
+                      림프구의 성능을 5일 동안 극대화하여 바이러스의 생성을
+                      억제합니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="tech-box tech3">
+                <div class="tech-img img3"></div>
+                <div class="text-box">
+                  <div>
+                    <h3>고주스</h3>
+                    <p>강력한 각성 효과를 부여해줍니다.</p>
+                    <p>
+                      각성 효과 이후 무기력함, 의존성 등의 부작용이 없습니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="tech-box tech4">
+                <div class="tech-img img4"></div>
+                <div class="text-box">
+                  <div>
+                    <h3>루시페륨</h3>
+                    <p>모든 신체 능력을 강화합니다.</p>
+                    <p>
+                      6일간의 효과가 있으며 뇌의 인지능력과 몸의 신체능력을 20%
+                      정도 상승시킵니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="tech-box tech5">
+                <div class="tech-img img5"></div>
+                <div class="text-box">
+                  <div>
+                    <h3>야요</h3>
+                    <p>
+                      Large quantity Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit. Suscipit ad perferendis quaerat
+                      adipisci, ea dolorum rem commodi voluptates assumenda
+                      neque tempore eius expedita labore pariatur. Optio
+                      consectetur sit ut atque!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="tech-box tech6">
+                <div class="tech-img img6"></div>
+                <div class="text-box">
+                  <div>
+                    <h3>암브로시아</h3>
+                    <p>
+                      New Tech Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit. Quidem ipsum, porro commodi accusantium
+                      a possimus saepe. Impedit, blanditiis omnis? Saepe aperiam
+                      cupiditate vitae impedit, molestias similique? Iusto,
+                      molestiae! Modi, sequi.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
+    <script src="../js/tabEvent.js"></script>
 
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium eaque
