--- a/my_project/kkh/html/algorithm.html
+++ b/my_project/kkh/html/algorithm.html
@@ -20,11 +20,11 @@
     <title>Data structure</title>
   </head>
   <body>
-    <div class="big">
+    <div>
       <!-- sidebar -->
-      <div class="sidebar flex-shrink-0 p-3 bg-white">
-        <ul class="list-unstyled ps-0">
-          <li class="mb-1">
+      <div class="mySidebar sidebar flex-shrink-0 p-3 bg-white">
+        <ul class="list-unstyled">
+          <li>
             <button
               class="btn btn-toggle align-items-center rounded collapsed"
               data-bs-toggle="collapse"
@@ -55,7 +55,7 @@
           </li>
           <hr />
 
-          <li class="mb-1">
+          <li>
             <button
               class="btn btn-toggle align-items-center rounded collapsed"
               data-bs-toggle="collapse"
@@ -75,7 +75,7 @@
         </ul>
       </div>
 
-      <div class="main-box">
+      <div class="main-box content">
         <div class="container">
           <!-- header -->
           <header
