--- a/test/a.html
+++ b/test/a.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title></title>
-<link rel='stylesheet' href='../css/a.scss'>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js'></script>
-</head>
-<body>
-  <div class="box1"><h1>h1</h1><h2>h2</h2></div>
-  <div class="box2"><h1>h1</h1><h2>h2</h2></div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link rel="stylesheet" href="./a.css" />
+  </head>
+  <body>
+    <div class="big">
+      <div class="small">a</div>
+    </div>
+  </body>
 </html>
