update my project
front

--- a/my_project/Dr_K/html/index.html
+++ b/my_project/Dr_K/html/index.html
@@ -39,28 +39,63 @@
             <img src="../img/logo.png" alt="logo" />
             <h1>Dr.K</h1>
           </div>
-          <ul>
-            <li class="nav-list">Home</li>
-            <li class="nav-list">Log in</li>
-            <li class="nav-list">Sign in</li>
-            <li class="nav-list">
+          <div class="lists">
+            <div class="nav-list tog-li">Home</div>
+            <div class="spacer"></div>
+            <div class="nav-list tog-li">Log in</div>
+            <div class="spacer"></div>
+            <div class="nav-list tog-li">Sign in</div>
+            <div class="spacer"></div>
+            <div class="nav-list tog-li">
               <a href="https://github.com/KimGyeongHyun"
-                ><i class="fa-brands fa-github-alt fa-1x icon-toggle"></i
+                ><i class="fa-brands fa-github-alt fa-1x tog-ic"></i
               ></a>
-            </li>
-          </ul>
-          <i class="fa-solid fa-bars fa-2x icon-toggle"></i>
+            </div>
+          </div>
+          <i class="fa-solid fa-bars fa-2x tog-ic"></i>
         </div>
         <div class="nav-box2">
-          <ul>
-            <li class="nav-list">소개</li>
-            <li class="nav-list">|</li>
-            <li class="nav-list">제품 정보</li>
-            <li class="nav-list">|</li>
-            <li class="nav-list">연구 성과</li>
-            <li class="nav-list">|</li>
-            <li class="nav-list">QnA</li>
-          </ul>
+          <div class="lists">
+            <div class="nav-list tog-li">소개</div>
+            <div class="spacer"></div>
+            <div class="nav-list tog-li">제품 정보</div>
+            <div class="spacer"></div>
+            <div class="nav-list tog-li">연구 성과</div>
+            <div class="spacer"></div>
+            <div class="nav-list tog-li">QnA</div>
+          </div>
+        </div>
+
+        <div class="nav-popup tog-pop">
+          <div class="nav-box">
+            <ul>
+              <li>CEO Latter</li>
+              <li>Vision</li>
+              <li>New C.I</li>
+              <li>Company</li>
+              <li>Location</li>
+            </ul>
+            <div class="spacer"></div>
+            <ul>
+              <li>Neutroamine</li>
+              <li>Penoxycyline</li>
+              <li>Lucyferium</li>
+              <li>Ambrosia</li>
+            </ul>
+            <div class="spacer"></div>
+            <ul>
+              <li>R&D</li>
+              <li>Production</li>
+              <li>Past</li>
+              <li>Future</li>
+            </ul>
+            <div class="spacer"></div>
+            <ul>
+              <li>Location</li>
+              <li>Recruite</li>
+              <li>Cop Comp</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -125,16 +160,24 @@
     </section>
 
     <!-- info -->
-    <section class="info" data-aos="fade-down" data-aos-duration="700">
+    <section class="info">
       <div class="op-box">
         <div class="container">
           <div class="text-box">
-            <h2>About Dr.K</h2>
-            <p>
+            <h2 data-aos="fade-down" data-aos-duration="500">About Dr.K</h2>
+            <p
+              data-aos="fade-down"
+              data-aos-duration="500"
+              data-aos-delay="300"
+            >
               1000조 원 규모의 글로벌 케미컬 의약품 시장을 개척하며 미래 성장을
               새로운 동력을 불어넣고 있습니다
             </p>
-            <p>
+            <p
+              data-aos="fade-down"
+              data-aos-duration="500"
+              data-aos-delay="600"
+            >
               다년간 쌓인 R&D 데이터는 안정성을 더욱 높이며 글로벌 제약의 선두에
               설 수 있는 기반을 마련합니다
             </p>
@@ -143,7 +186,7 @@
       </div>
     </section>
 
-    <section class="tech" data-aos="fade-down" data-aos-duration="700">
+    <section class="tech" data-aos="fade-down" data-aos-duration="1000">
       <div class="op-box">
         <div class="inner">
           <h2>Technology</h2>
@@ -161,15 +204,12 @@
                 <div class="tech-img img1"></div>
                 <div class="text-box">
                   <div>
-                    <h3>뉴트로아민</h3>
+                    <h3>Neutroamine</h3>
                     <p>극도의 환경에서 변형이 일어나지 않습니다.</p>
                     <p>
                       또한, 1400 여개의 약물과 화학 반응 안정성 검사 결과 인체에
                       유해한 물질이 검출되지 않고, 변형도 일어나지 않음이
                       확인되었습니다.
-                    </p>
-                    <p>
-                      저희는 뉴트로아민을 광범위한 제약에 사용하고 있습니다.
                     </p>
                   </div>
                 </div>
@@ -178,7 +218,7 @@
                 <div class="tech-img img2"></div>
                 <div class="text-box">
                   <div>
-                    <h3>페녹시실린</h3>
+                    <h3>Penoxycyline</h3>
                     <p>
                       강력하고 안정적인 항바이러스 성분으로, 대부분의 바이러스의
                       활동성을 극도로 낮춰줍니다.
@@ -194,7 +234,7 @@
                 <div class="tech-img img3"></div>
                 <div class="text-box">
                   <div>
-                    <h3>고주스</h3>
+                    <h3>Go-Juice</h3>
                     <p>강력한 각성 효과를 부여해줍니다.</p>
                     <p>
                       각성 효과 이후 무기력함, 의존성 등의 부작용이 없습니다.
@@ -206,7 +246,7 @@
                 <div class="tech-img img4"></div>
                 <div class="text-box">
                   <div>
-                    <h3>루시페륨</h3>
+                    <h3>Lucyferium</h3>
                     <p>모든 신체 능력을 강화합니다.</p>
                     <p>
                       6일간의 효과가 있으며 뇌의 인지능력과 몸의 신체능력을 20%
@@ -219,14 +259,9 @@
                 <div class="tech-img img5"></div>
                 <div class="text-box">
                   <div>
-                    <h3>야요</h3>
-                    <p>
-                      Large quantity Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Suscipit ad perferendis quaerat
-                      adipisci, ea dolorum rem commodi voluptates assumenda
-                      neque tempore eius expedita labore pariatur. Optio
-                      consectetur sit ut atque!
-                    </p>
+                    <h3>Yeyo</h3>
+                    <p>우울증 환자를 위한 항우울제 입니다.</p>
+                    <p>몸을 이완시켜주고 엔돌핀 수용체를 활성화합니다.</p>
                   </div>
                 </div>
               </div>
@@ -234,13 +269,11 @@
                 <div class="tech-img img6"></div>
                 <div class="text-box">
                   <div>
-                    <h3>암브로시아</h3>
+                    <h3>Ambrosia</h3>
+                    <p>하루 섭취량의 미네랄, 비타민을 가진 영양제입니다.</p>
                     <p>
-                      New Tech Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Quidem ipsum, porro commodi accusantium
-                      a possimus saepe. Impedit, blanditiis omnis? Saepe aperiam
-                      cupiditate vitae impedit, molestias similique? Iusto,
-                      molestiae! Modi, sequi.
+                      복용자의 건강 상태에 따라 식욕을 조절하는 호르몬을
+                      통제합니다.
                     </p>
                   </div>
                 </div>
@@ -252,73 +285,134 @@
     </section>
     <script src="../js/tabEvent.js"></script>
 
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium eaque
-      dolorem molestiae ipsum recusandae quas repellendus aperiam ea nam, saepe
-      perspiciatis est aspernatur doloremque, rem dolorum in sequi officiis
-      quisquam! Voluptatum accusantium perspiciatis eum minima obcaecati,
-      veritatis necessitatibus consequuntur quisquam alias. Repellat commodi,
-      aliquam quis ratione quo cumque fuga vitae, possimus officia molestias qui
-      est laudantium distinctio nihil odit? Dolor. Recusandae tenetur minus
-      laborum at, distinctio enim. Earum, pariatur ea. Porro repellat laudantium
-      ea eligendi, doloremque maiores explicabo quaerat qui odit animi provident
-      nostrum facilis consequatur temporibus? Laborum, fugiat ullam. Aliquid
-      doloribus autem possimus est qui, molestias dicta officiis ratione
-      delectus incidunt nesciunt ad repellat, non ea recusandae itaque quasi
-      libero? Voluptatibus modi culpa molestiae iste numquam, quisquam dicta
-      nemo! Libero architecto assumenda vel sapiente laborum itaque, eaque
-      pariatur. Dolores ipsum ipsa sint quos at fugiat consequatur et, atque
-      ducimus esse a sed similique expedita repudiandae maxime eaque beatae
-      labore. Non quo, sed perferendis quae voluptates sit, temporibus aut
-      officiis incidunt magni saepe omnis ducimus asperiores aliquid quia unde
-      porro dolor ipsum accusamus debitis! Reiciendis consequuntur iusto modi
-      maxime quae. Non dolore consectetur fuga rerum, repudiandae architecto
-      laboriosam eligendi omnis veniam fugiat cupiditate illum iste nostrum
-      quasi atque quaerat esse reiciendis mollitia aspernatur earum, corrupti,
-      odit magni debitis enim? Excepturi. Autem recusandae magni qui asperiores
-      vitae explicabo dolor molestiae maxime accusantium nesciunt ratione,
-      voluptatibus, ipsa vel labore consequuntur nihil, cupiditate dolore animi
-      nostrum ipsam. Iste vel architecto voluptatem excepturi beatae! Et veniam,
-      eligendi ipsam delectus voluptate harum enim voluptatem numquam quos
-      suscipit dicta ad, vitae aliquam sapiente molestias, quasi cumque! Eum
-      quod necessitatibus corrupti sunt possimus dicta ad libero fugit? Ab
-      dolorum officia soluta ut corrupti eaque atque. Recusandae, voluptate
-      omnis. Facilis laborum dicta repellendus nostrum expedita odit molestias
-      velit rem doloremque earum veniam temporibus, aliquam adipisci ducimus
-      delectus modi! Inventore nobis id earum at illum unde ducimus, mollitia
-      soluta facilis sit quod nam in excepturi asperiores dolorum corporis
-      laudantium quae expedita. Quisquam maiores tenetur aperiam praesentium.
-      Velit, deserunt ipsum. Recusandae nesciunt, quidem voluptates numquam
-      cumque error accusamus adipisci, harum, at minus doloribus eveniet
-      quisquam? Harum distinctio nulla maiores neque magnam blanditiis
-      exercitationem recusandae illo, quod repellendus reiciendis fuga libero?
-      Nulla officia quia est consequatur debitis tenetur incidunt consectetur
-      laboriosam neque, voluptates esse? Placeat, nisi iusto animi velit ab
-      totam? Commodi quis ipsa inventore sequi perspiciatis. Dolore, officiis!
-      Iure, quo. Consequatur saepe dicta eum voluptatibus rerum corporis ducimus
-      quos. Vel, aliquam veritatis quis alias beatae eaque delectus illo
-      corrupti. Ipsum pariatur nobis ab accusamus laboriosam ratione porro,
-      provident quis? Velit. Distinctio ab obcaecati, et ullam voluptas quod
-      quia maiores. Velit harum sed suscipit voluptate sint blanditiis eveniet
-      nam nulla molestiae culpa neque deserunt, et repellendus, assumenda ab
-      dolorem corrupti laboriosam. In, vel? Repellendus earum omnis dolor
-      inventore necessitatibus maxime nemo totam molestias quod quisquam
-      obcaecati voluptate quam ipsam nostrum natus ut, magni, mollitia illum
-      quaerat? Consectetur quas fuga ut pariatur. Laudantium atque quam ea
-      blanditiis beatae accusantium incidunt veniam, repellendus delectus sunt
-      perferendis nobis quod possimus, maxime error voluptas id hic distinctio
-      aperiam obcaecati qui! Nihil tenetur aperiam ipsa dignissimos! Neque
-      velit, recusandae corrupti illum quidem, commodi in ex impedit aperiam
-      est, ratione cum! Dolorem illo distinctio eaque ducimus, aperiam aliquam,
-      sint molestiae laboriosam saepe temporibus laborum earum, vel recusandae.
-      Nesciunt, quos pariatur. Nulla voluptatem provident nam natus excepturi
-      esse corporis explicabo, iste illum minima neque! Adipisci obcaecati
-      maxime, eius iste quidem illum odio assumenda eos sit voluptates tenetur
-      magni. Rem, perspiciatis est atque inventore pariatur nulla quaerat ut.
-      Quis ad asperiores doloribus voluptates reiciendis iure dolore omnis earum
-      voluptatem, laudantium tempora adipisci autem maxime, porro quasi alias et
-      ea!
-    </p>
+    <section class="rnd">
+      <div class="op-box">
+        <div class="inner">
+          <h2 data-aos="fade-down" data-aos-duration="700">
+            Research and Develope
+          </h2>
+          <div class="content" data-aos="fade-right" data-aos-duration="700">
+            <img src="../img/rnd1.jpg" alt="" />
+            <div class="text-box">
+              <h3>Title 1</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
+                nobis tempora quod ratione. Nobis, repudiandae laboriosam amet
+                earum laborum qui atque assumenda.
+              </p>
+            </div>
+          </div>
+          <div class="content" data-aos="fade-left" data-aos-duration="700">
+            <div class="text-box">
+              <h3>Title 2</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
+                nobis tempora quod ratione. Nobis, repudiandae laboriosam amet
+                earum laborum qui atque assumenda.
+              </p>
+            </div>
+            <img src="../img/rnd3.jpg" alt="" />
+          </div>
+          <div class="content" data-aos="fade-right" data-aos-duration="700">
+            <img src="../img/tech6.jpg" alt="" />
+            <div class="text-box">
+              <h3>Title 3</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
+                nobis tempora quod ratione. Nobis, repudiandae laboriosam amet
+                earum laborum qui atque assumenda.
+              </p>
+            </div>
+          </div>
+          <div class="content" data-aos="fade-left" data-aos-duration="700">
+            <div class="text-box">
+              <h3>Title 4</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
+                nobis tempora quod ratione. Nobis, repudiandae laboriosam amet
+                earum laborum qui atque assumenda.
+              </p>
+            </div>
+            <img src="../img/covid-5288310_1920.jpg" alt="" />
+          </div>
+          <h4>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam
+            dolorem fuga recusandae hic magnam? Eveniet quidem possimus corporis
+            quia aperiam quos voluptatum. Tempora numquam harum corrupti iusto
+            asperiores enim necessitatibus.
+          </h4>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="community inner"
+      data-aos="fade-down"
+      data-aos-duration="700"
+    >
+      <h2>Community</h2>
+      <div class="contents">
+        <div class="content">
+          <div class="num-box">7.2</div>
+          <div class="text-box">
+            <h3>asdf</h3>
+            <p>asdfasdfasdf</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="num-box">7.30</div>
+          <div class="text-box">
+            <h3>asdf</h3>
+            <p>asdfasdfasdf</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="num-box">8.1</div>
+          <div class="text-box">
+            <h3>asdf</h3>
+            <p>asdfasdfasdf</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="num-box">8.4</div>
+          <div class="text-box">
+            <h3>asdf</h3>
+            <p>asdfasdfasdf</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="num-box">8.17</div>
+          <div class="text-box">
+            <h3>asdf</h3>
+            <p>asdfasdfasdf</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="num-box">8.29</div>
+          <div class="text-box">
+            <h3>asdf</h3>
+            <p>asdfasdfasdf</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="inner">
+        <div class="content">
+          <div class="logo">Dr.K</div>
+          <div class="text-box">
+            <p>Superviser : Vigene | Address : dfaosidhfjk.f jsdhfo</p>
+            <p>Tel : 023-4938-4832 | Fax : 021-4325-5867</p>
+            <p>drdotk.korea@gmail.com</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script>
       AOS.init();
