--- a/my_project/anywhere/html/index.html
+++ b/my_project/anywhere/html/index.html
@@ -376,6 +376,24 @@
     </section>
 
     <div id="scroll4"></div>
+    <section class="event">
+      <div class="content c1">
+        <h3>점포 리뷰하고 선물 받자!</h3>
+        <p>추첨으로 선물 받아가세요~~</p>
+      </div>
+      <div class="content c2">
+        <div class="text-box">
+          <h3>사장님 응원해요~ 이벤트</h3>
+          <p>응원하고 다양한 추첨 선물을 받아가세요</p>
+        </div>
+      </div>
+      <div class="content c3"></div>
+      <div class="content c4"></div>
+
+      <div class="content c5"><h3>신선 재료 인증 마크 시스템</h3></div>
+      <div class="content c6"><h3>밤낮으로 가동되는 배달서비스</h3></div>
+    </section>
+
     <!-- footer section  -->
     <section class="footer">
       <div class="footer-box">
