--- a/my_project/kkh/html/index.html
+++ b/my_project/kkh/html/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../css/home.css" />
     <title>My Code library</title>
   </head>
+
   <body>
     <div class="container">
       <!-- header -->
@@ -27,7 +28,7 @@
       >
         <div class="col-md-3 mb-2 mb-md-0">
           <a
-            href="/"
+            href="#"
             class="d-inline-flex link-body-emphasis text-decoration-none"
           >
             Coding portfolid
@@ -78,7 +79,14 @@
       <!-- sc -->
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
         <div class="algorithm-section sc rounded-3 row">
-          <div class="img-box col-4 bg-white rounded-3"></div>
+          <div class="img-box col-4 bg-white rounded-3">
+            <img class="img1" src="../img/algorithm.PNG" alt="algorithm" />
+            <img
+              class="img2"
+              src="../img/data structure.PNG"
+              alt="data-structure"
+            />
+          </div>
           <div class="text-box col-8">
             <h2 class="fw-bold">알고리즘과 자료구조 공부</h2>
             <p>백준에서 제공하는 프로그래밍 문제로 알고리즘과 자료구조 공부</p>
