update my project

--- a/my_project/Dr_K/html/index.html
+++ b/my_project/Dr_K/html/index.html
@@ -159,7 +159,7 @@
       <script src="../js/navEvent.js"></script>
     </section>
 
-    <!-- info -->
+    <!-- info section -->
     <section class="info">
       <div class="op-box">
         <div class="container">
@@ -186,10 +186,11 @@
       </div>
     </section>
 
-    <section class="tech" data-aos="fade-down" data-aos-duration="1000">
+    <!-- product section -->
+    <section class="product" data-aos="fade-down" data-aos-duration="1000">
       <div class="op-box">
         <div class="inner">
-          <h2>Technology</h2>
+          <h2>Production</h2>
           <div class="tech-content">
             <div class="buttons">
               <button id="btn1" class="active">Neutroamine</button>
@@ -285,6 +286,7 @@
     </section>
     <script src="../js/tabEvent.js"></script>
 
+    <!-- R&D section -->
     <section class="rnd">
       <div class="op-box">
         <div class="inner">
@@ -294,7 +296,7 @@
           <div class="content" data-aos="fade-right" data-aos-duration="700">
             <img src="../img/rnd1.jpg" alt="" />
             <div class="text-box">
-              <h3>Title 1</h3>
+              <h3>Think Big 연구</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
@@ -305,7 +307,7 @@
           </div>
           <div class="content" data-aos="fade-left" data-aos-duration="700">
             <div class="text-box">
-              <h3>Title 2</h3>
+              <h3>친환경, 유기농 재료</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
@@ -318,7 +320,7 @@
           <div class="content" data-aos="fade-right" data-aos-duration="700">
             <img src="../img/tech6.jpg" alt="" />
             <div class="text-box">
-              <h3>Title 3</h3>
+              <h3>연구 시설</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
@@ -329,7 +331,7 @@
           </div>
           <div class="content" data-aos="fade-left" data-aos-duration="700">
             <div class="text-box">
-              <h3>Title 4</h3>
+              <h3>생산 증가 & 지원</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Dolorum delectus tempora optio dicta beatae! Dolorum harum nemo
@@ -339,49 +341,126 @@
             </div>
             <img src="../img/covid-5288310_1920.jpg" alt="" />
           </div>
-          <h4>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam
-            dolorem fuga recusandae hic magnam? Eveniet quidem possimus corporis
-            quia aperiam quos voluptatum. Tempora numquam harum corrupti iusto
-            asperiores enim necessitatibus.
-          </h4>
         </div>
       </div>
     </section>
 
+    <!-- CEO comment section -->
+    <section class="CEO">
+      <div class="op-box">
+        <div class="inner">
+          <h2 data-aos="fade-left" data-aos-duration="700">
+            Motivation & Innovation
+          </h2>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+          >
+            저희 회사는 이익 실현을 우선으로 행동하지 않습니다
+          </p>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+            data-aos-delay="200"
+            style="margin-bottom: 70px"
+          >
+            선행을 통한 브랜드 가치 상승을 회사의 모티브로 생각합니다
+          </p>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+            data-aos-delay="400"
+          >
+            긴급한 재난상황이나 여러가지 어려운 상황 속에서도
+          </p>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+            data-aos-delay="500"
+            style="margin-bottom: 70px"
+          >
+            여러분과 같이 생각하고, 같이 행동하고, 같이 해결하는 회사가
+            되겠습니다
+          </p>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+            data-aos-delay="700"
+          >
+            생활이 어려운 분들을 위한 국내 의료 지원, 해외 의료 서비스가 필요한
+            국가를 위한 의료 지원 등
+          </p>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+            data-aos-delay="800"
+            style="margin-bottom: 70px"
+          >
+            다양한 의료 지원 서비스를 꾸준히 진행하겠습니다
+          </p>
+          <p
+            data-aos="fade-left"
+            data-aos-duration="700"
+            data-aos-anchor=".CEO h2"
+            data-aos-delay="1000"
+            style="font-size: 3.5vw"
+          >
+            항상 여러분과 함께 하는 Dr.K 가 되겠습니다.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- community section -->
     <section
       class="community inner"
       data-aos="fade-down"
       data-aos-duration="700"
     >
       <h2>Community</h2>
+      <div class="read-more">
+        read more
+        <div class="under-line"></div>
+      </div>
       <div class="contents">
         <div class="content">
           <div class="num-box">7.2</div>
           <div class="text-box">
-            <h3>asdf</h3>
-            <p>asdfasdfasdf</p>
+            <h3>치매 예방 성분 특허 출원</h3>
+            <p>작년 2월부터 개발한 치매 예방 성분 특허가 출원 되었습니다...</p>
           </div>
         </div>
         <div class="content">
           <div class="num-box">7.30</div>
           <div class="text-box">
-            <h3>asdf</h3>
-            <p>asdfasdfasdf</p>
+            <h3>과도한 처방 예방 방지에 힘써주세요</h3>
+            <p>
+              병원에서 처방받은 약 중 프로포폴을 함유하고 있는 약을 따로 모으는
+              사람들이 증가하고 있습니다..
+            </p>
           </div>
         </div>
         <div class="content">
           <div class="num-box">8.1</div>
           <div class="text-box">
-            <h3>asdf</h3>
-            <p>asdfasdfasdf</p>
+            <h3>8월 공지사항</h3>
+            <p>페이지 리뉴얼 / 연구 현황 / 작년과 비교한 매출</p>
           </div>
         </div>
         <div class="content">
           <div class="num-box">8.4</div>
           <div class="text-box">
-            <h3>asdf</h3>
-            <p>asdfasdfasdf</p>
+            <h3>의료 지원 서비스</h3>
+            <p>
+              의료 서비스를 제때 받지 못하는 국가에 약을 지원하는 서비스
+              추진중...
+            </p>
           </div>
         </div>
         <div class="content">
@@ -401,6 +480,7 @@
       </div>
     </section>
 
+    <!-- footer -->
     <footer>
       <div class="inner">
         <div class="content">
