--- a/my_project/anywhere/html/index.html
+++ b/my_project/anywhere/html/index.html
@@ -40,10 +40,10 @@
     <!-- tracking nav section -->
     <section class="tracking-nav">
       <ul>
-        <li id="sc1">top</li>
-        <li id="sc2">menu</li>
-        <li id="sc3">소개</li>
-        <li id="sc4">down</li>
+        <li id="sc1">Top</li>
+        <li id="sc2">Menu</li>
+        <li id="sc3">Intro</li>
+        <li id="sc4">Event</li>
       </ul>
 
       <!-- scroll toggle -->
@@ -373,25 +373,65 @@
           점검하여 조건에 맞는 점포에 인증 마크를 줍니다.
         </p>
       </div>
+      <div id="scroll4"></div>
     </section>
 
-    <div id="scroll4"></div>
     <section class="event">
-      <div class="content c1">
+      <div class="content c1" id="e1" data-aos="fade-up">
         <h3>점포 리뷰하고 선물 받자!</h3>
         <p>추첨으로 선물 받아가세요~~</p>
       </div>
-      <div class="content c2">
+      <div
+        class="content c2"
+        id="e2"
+        data-aos="fade-up"
+        data-aos-anchor=".c1"
+        data-aos-delay="100"
+      >
         <div class="text-box">
           <h3>사장님 응원해요~ 이벤트</h3>
           <p>응원하고 다양한 추첨 선물을 받아가세요</p>
         </div>
       </div>
-      <div class="content c3"></div>
-      <div class="content c4"></div>
-
-      <div class="content c5"><h3>신선 재료 인증 마크 시스템</h3></div>
-      <div class="content c6"><h3>밤낮으로 가동되는 배달서비스</h3></div>
+      <div
+        class="content c3"
+        id="e3"
+        data-aos="fade-up"
+        data-aos-anchor=".c1"
+        data-aos-delay="200"
+      >
+        <div class="text-box">
+          <h3>배달 쿠폰 적립 이벤트</h3>
+          <p>10번에 한 번은 배달비 무료</p>
+        </div>
+      </div>
+      <div
+        class="content c4"
+        id="e4"
+        data-aos="fade-up"
+        data-aos-anchor=".c1"
+        data-aos-delay="300"
+      >
+        <h3>Anywhere Delivery Festival</h3>
+      </div>
+      <div
+        class="content c5"
+        id="e5"
+        data-aos="fade-up"
+        data-aos-anchor=".c1"
+        data-aos-delay="400"
+      >
+        <h3>신선 재료 인증 마크 시스템</h3>
+      </div>
+      <div
+        class="content c6"
+        id="e6"
+        data-aos="fade-up"
+        data-aos-anchor=".c1"
+        data-aos-delay="500"
+      >
+        <h3>밤낮으로 가동되는 배달서비스</h3>
+      </div>
     </section>
 
     <!-- footer section  -->
