update my project
add easy music

--- a/my_project/index.html
+++ b/my_project/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="./anywhere/html/index.html">Anywhere 배달 음식</a></li>
       <li><a href="./Dr_K/html/index.html">Dr.K 제약 회사</a></li>
+      <li><a href="./EasyMusic/html/index.html">Easy Music 작곡 회사</a></li>
       <li><a href="./kkh/html/index.html">Coding portfolio</a></li>
     </ul>
   </body>
